# mon-fs

./: .gitignore  Cargo.toml  README.md  index.html  toolchain.toml
.github/workflows/: deploy.workflow.yaml  main.yml
assets/: index-BGntGIh0.js  index-C48ySXoJ.js  index-CHcvGl_9.js  index-CkR2Xoco.js  index-D6RrO1xj.js  index-DRRDSH2e.css  index-Ddb27qJx.css  index-Df8kXtcg.js  index-qCsfASiM.css  mon_fs_web_box_bg-BT1S9ofQ.wasm  mon_fs_web_box_bg-D5EK95i0.wasm  mon_fs_web_box_bg-D9a0SYBX.wasm
bot-plugin/: mon_fs.py
box/: Cargo.toml
box/benches/: benchmark.rs
box/src/: box_mon.rs  file_pc.rs  lib.rs  marker_mon.rs  mon_captured_ball.rs  mon_field.rs  mon_gender.rs  mon_held_item.rs  mon_name.rs  mon_species.rs  pc.rs
guide-site/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
guide-site/src/: App.vue  item_locations.ts  main.ts  pc.ts
guide-site/src/assets/: base.css  main.css
guide-site/src/components/: BoxView.vue  DecodeView.vue  EditBoxView.vue  FreePCSpace.vue  NeededItems.vue  NeededMons.vue  PCView.vue
guide-site/src/stores/: pc_store.ts
mon-fs/: Cargo.toml
mon-fs/src/: decode.rs  encode.rs  main.rs  options.rs
pc_screenshot_decoder/: .gitignore  pyproject.toml
pc_screenshot_decoder/pc_screenshot_decoder/: main.py
test_assets/: song.opus
web-box/: Cargo.toml
web-box/src/: lib.rs
wild/: Cargo.toml
wild/src/: lib.rs
