[package]
name = "mon-fs-box"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-vec = "0.8.0"
edit-distance = "2.1.2"
flate2 = "1.0.33"
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
struct_iterable = "0.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.127"
tempdir = "0.3.7"
