[package]
name = "mon-fs-box"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bit-vec = "0.8.0"
edit-distance = "2.1.2"
flate2 = { version = "1.0.33", default-features = false, features = [
    "zlib-rs",
] }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
struct_iterable = "0.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.127"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
