[tool.poetry]
name = "pc_screenshot_decoder"
version = "0.1.0"
description = ""
authors = ["sardap <paul@sarda.dev>"]
readme = "README.md"
packages = [{ include = "pc_screenshot_decoder" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
easyocr = "^1.7.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
pydantic = "^2.8.2"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.poetry.scripts]
decoder = "pc_screenshot_decoder.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
