[package]
name = "mon-fs-web-box"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mon-fs-box = { path = "../box" }
bincode = "1.3.3"
wasm-bindgen = "0.2.93"
serde_json = "1.0.127"
zip = { version = "2.2.0", default-features = false }

[dev-dependencies]
rand = "0.8.5"
